PGVector: Java 8 Compatible